weblate/listenerset.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: weblate-oeol-uchile-cl-https-route
  namespace: weblate
  labels:
    app.kubernetes.io/name: weblate
    app.kubernetes.io/instance: weblate
    app.kubernetes.io/version: "5.14.3.0"
spec:
  hostnames:
  - weblate.oeol.uchile.cl
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: weblate-listeners
      namespace: weblate
      sectionName: weblate-oeol-uchile-cl-https
  rules:
    - filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: X-Robots-Tag
                value: "none"
      backendRefs:
        - name: weblate
          namespace: weblate
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: weblate-http-to-https-redirect
  namespace: weblate
spec:
  parentRefs:
    - name: public-gateway
      namespace: tigera-gateway
      sectionName: http
  hostnames:
    - "weblate.oeol.uchile.cl"
  rules:
    - filters:
      - type: RequestRedirect
        requestRedirect:
          scheme: https
          statusCode: 308
